--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,3 +53,396 @@ nav {
 #nav-section li:hover a {
     color: #0065FC;
 }
+
+/* Search form */
+.search-form {
+    display: flex;
+    margin: 15px 0 20px 0;
+    border-top: 2px solid #F2F2F2;
+    border-bottom: 2px solid #F2F2F2;
+    border-radius: 15px;
+    width: fit-content;
+}
+
+/* ======= D1- Location icon ======= */
+
+/* Location dot icon */
+.location-icon {
+    border-radius: 15px 0 0 15px;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    font-size: 20px;
+    background-color: #F2F2F2;
+}
+
+/* ======= D2- Search input ======= */
+
+/* Input */
+.search-input {
+    border: none;
+    padding-left: 15px;
+    font-weight: bold;
+}
+
+/* Placeholder */
+.search-input::placeholder {
+    color: black;
+    opacity: 1;
+}
+
+/* Outline focus effect */
+.search-input:focus {
+    outline: 4px solid #0065FC;
+    outline-offset: -3px;
+}
+
+/* Color hover & focus effect */
+.search-input:hover::placeholder,
+.search-input:focus::placeholder {
+    color: #F2F2F2;
+}
+
+/* ======= D3- Search button ======= */
+
+/* Text button */
+.search-btn-text {
+    border: none;
+    border-radius: 0 15px 15px 0;
+    padding: 0 20px;
+    font-weight: bold;
+    color: white;
+    background-color: #0065FC;
+    outline: 2px solid #0065FC;
+    outline-offset: -1px;
+}
+
+/* Icon button */
+.search-btn-icon {
+    display: none;
+}
+
+/* Button focus effect */
+.search-btn-text:focus,
+.search-btn-icon:focus {
+    color: #0065FC;
+    background-color: white;
+    outline: 5px solid #0065FC;
+    outline-offset: -4px;
+}
+
+.search-btn-text:focus:not(:focus-visible),
+.search-btn-icon:focus:not(:focus-visible) {
+    color: white;
+    background-color: #0065FC;
+    outline: 2px solid #0065FC;
+    outline-offset: -1px;
+}
+
+.text-container h1 {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 30px;
+    margin-top: 40px;
+    margin-bottom: 5px;
+}
+
+.text-container p {
+    margin: 0;
+}
+
+.text-container p {
+    font-size: 16px;
+}
+
+input {
+    outline: none;
+    border: none;
+    border-top: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
+    background-color: transparent;
+    font-weight: bold;
+    color: black;
+    padding: 10px;
+    margin: initial;
+    font-size: 18px;
+}
+
+form {
+    margin-top: 15px;
+}
+
+/* FILTERS */
+
+#filters-section {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    margin-top: 25px;
+}
+
+#filters {
+    display: flex;
+    margin-left: 30px;
+}
+
+.filters {
+    border: 2px solid var(--gr);
+    border-radius: 25px;
+    padding: 10px 15px;
+    margin-right: 35px;
+    font-size: 17px;
+}
+
+.filters:hover {
+    background-color: var(--cyan);
+    cursor: pointer;
+}
+
+#filters .filters i {
+    color: var(--blue);
+    margin-right: 10px;
+}
+
+#info {
+    display: flex;
+    align-items: center;
+    margin-top: 35px;
+    margin-bottom: 25px;
+}
+
+#text {
+    font-size: 16px;
+}
+
+#info-logo {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 1px solid var(--grey);
+    margin-right: 10px;
+}
+
+#info-logo i {
+    margin-left: 12px;
+    margin-top: 5px;
+    color: var(--blue)
+}
+
+/* HEBERGEMENTS */
+
+#container-house {
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    padding: 42px 40px;
+    width: 70%;
+}
+
+#container-house h2 {
+    margin: 0;
+    margin-bottom: 25px;
+    font-size: 22px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.container-box img {
+    width: 100%;
+    height: 165px;
+    object-fit: cover;
+}
+
+.container-box p,
+.container-box h3 {
+    margin: 0px;
+}
+
+.stars i {
+    width: 12px;
+    height: 12px;
+    color: var(--blue);
+    margin: 0 1px;
+}
+
+.stars .star-grey {
+    color: var(--grey);
+}
+
+.container-picture {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.container-picture a {
+    margin-top: 10px;
+}
+
+.container-box {
+    padding: 4px 4px 10px 4px;
+    background-color: white;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    flex: 0 1 30%;
+    box-shadow: rgb(0 0 0 / 10%) 4px 3px 10px;
+}
+
+.img-house img {
+    border-radius: 20px 20px 0px 0px;
+}
+
+.house-text {
+    margin-left: 7px;
+}
+
+.house-text h3 {
+    font-size: 16px;
+    margin-top: 4px;
+}
+
+.house-text p {
+    font-size: 14px;
+    margin-top: 9px;
+    margin-bottom: 9px;
+}
+
+.view-more {
+    font-weight: bold;
+}
+
+/* POPULAIRES */
+
+#container {
+    display: flex;
+}
+
+#popular {
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    padding: 38px 38px 10px;
+    margin-left: 40px;
+    width: 30%;
+}
+
+.popular-house img {
+    width: 140px;
+    height: 160px;
+    object-fit: cover;
+    border-radius: 20px 0px 0px 20px;
+}
+
+.popular-house {
+    display: flex;
+
+}
+
+#popular a {
+    display: flex;
+}
+
+.house-text-popular {
+    position: relative;
+    margin-left: 15px;
+}
+
+.house-text-popular .stars {
+    position: absolute;
+    bottom: 5px;
+}
+
+.house-text-popular h3 {
+    font-size: 16px;
+}
+
+.popular-container {
+    background-color: white;
+    padding: 4px;
+    border-radius: 20px;
+    margin-bottom: 35px;
+    box-shadow: rgb(0 0 0 / 10%) 4px 3px 10px;
+}
+
+#popular-icon {
+    display: flex;
+    align-items: center;
+    margin-bottom: 26px;
+    justify-content: space-between;
+}
+
+#popular-icon i {
+    margin-left: 45%;
+    color: var(--blue);
+    font-size: 20px;
+}
+
+#popular-icon h2 {
+    margin: 0;
+    font-size: 22px;
+}
+
+/* Activity */
+
+#activity-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+#activity {
+    border-radius: 20px;
+    padding: 40px 0;
+}
+
+.activity-box,
+.activity-box img {
+    width: 400px;
+    height: 500px;
+    border-radius: 20px 20px 0 0;
+}
+
+.activity-box {
+    box-shadow: rgb(0 0 0 / 10%) 4px 3px 10px;
+    border-radius: 20px 20px 20px 20px;
+}
+
+.activity-box img {
+    object-fit: cover;
+    height: 450px;
+}
+
+.activity-box p {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+    padding: 12px 0 15px 20px;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: var(--grey);
+}
+
+#footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 45px 70px;
+    width: 70%;
+}
+
+.footer-item h2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.footer-item ul {
+    padding: 0;
+}
+
+.footer-item li {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
