--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,6 +54,7 @@ h4 {
 
 ul {
     list-style: none;
+    padding-left: 0;
 }
 
 a {
@@ -98,7 +99,7 @@ a {
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 
-.card-border {
+.card--border {
     border: 5px solid #ffffff;
 }
 
@@ -108,23 +109,23 @@ a {
     display: flex;
 }
 
-.card-content {
+.card__content {
     color: var(--primary);
     padding: 0.5rem;
 }
 
-.card-content-rating {
+.card__content-rating {
     display: flex;
     gap: 2px;
     margin-top: 0.25rem;
 }
 
-.card-content-rating i {
+.card__content-rating i {
     font-size: 0.75rem;
     color: var(--bg-grey);
 }
 
-.card-content-rating i.star--blue {
+.card__content-rating i.star--blue {
     color: var(--secondary);
 }
 
@@ -145,7 +146,7 @@ header {
 
 /* navbar */
 .navbar {
-    flex-basis: 305px;
+    flex-basis: 19rem;
 }
 
 .navbar-nav {
@@ -153,7 +154,7 @@ header {
     justify-content: space-around;
 }
 
-.nav-item {
+.nav__item {
     width: 100%;
     height: 8rem;
     display: flex;
@@ -162,18 +163,18 @@ header {
     border-top: 3px solid transparent;
 }
 
-.nav-item:hover {
+.nav__item:hover {
     border-top: 3px solid var(--secondary);
 }
 
-.nav-link {
+.nav__link {
     font-weight: 500;
     color: var(--primary);
     padding: 2rem;
     position: relative;
 }
 
-.nav-item:hover .nav-link {
+.nav__item:hover .nav__link {
     color: var(--secondary);
 }
 
@@ -185,24 +186,24 @@ main {
     flex-direction: column;
 }
 
-/* Section #searchBar */
-#searchBar {
+/* Section #search-bar */
+#search-bar {
     display: flex;
     flex-direction: column;
     position: relative;
 }
 
-#searchBar h1 {
+#search-bar h1 {
     margin-bottom: 8px;
 }
 
-#searchBar form {
+#search-bar form {
     height: 50px;
     display: flex;
     margin: 2rem 0;
 }
 
-.form-label {
+.form__label {
     width: 50px;
     display: flex;
     justify-content: center;
@@ -212,7 +213,7 @@ main {
     border-radius: 15px 0 0 15px;
 }
 
-#formLink {
+#form__input {
     width: 282px;
     max-width: 65%;
     padding: 0 1rem;
@@ -224,19 +225,19 @@ main {
     cursor: text;
 }
 
-#formLink:focus-visible {
+#form__input:focus-visible {
     outline: none;
     border: 2px solid var(--secondary);
 }
 
-#formLink::placeholder {
+#form__input::placeholder {
     color: var(--primary);
     font-size: 1.125rem;
     font-weight: 700;
     opacity: 1;
 }
 
-#searchBar button[type="submit"] {
+#search-bar button[type="submit"] {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -252,7 +253,7 @@ main {
     user-select: none;
 }
 
-#searchBar button[type="submit"] i {
+#search-bar button[type="submit"] i {
     display: none;
 }
 
@@ -279,12 +280,12 @@ main {
 .fa-info {
     width: 24px;
     height: 24px;
-    /*display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center;*/
+    align-items: center;
     position: relative;
-    right: -5px;
-    top: 2.5px;
+    right: -8px;
+    top: 4px;
     margin-right: 11px;
     color: var(--secondary);
     font-size: 0.75rem;
@@ -295,8 +296,8 @@ main {
     width: 20px;
     height: 20px;
     position: absolute;
-    left: -9.55px;
-    top: -2.5px;
+    left: -8.7px;
+    top: -3px;
     border: 1px solid var(--grey);
     border-radius: 50%;
 }
@@ -308,13 +309,13 @@ main {
     user-select: none;
 }
 
-.list-col {
+.list--col {
     width: auto;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.list-item {
+.list__item {
     margin-right: 2rem;
 }
 
@@ -343,20 +344,20 @@ main {
     flex-direction: column;
 }
 
-#accomodations .card-img {
+#accomodations .card__img {
     width: 100%;
     height: 124px;
     object-fit: cover;
     border-radius: 18px 18px 0 0;
 }
 
-#accomodations .card-content {
+#accomodations .card__content {
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
 }
 
-#accomodations .card-content p:first-of-type {
+#accomodations .card__content p:first-of-type {
     margin-top: auto;
 }
 
@@ -370,8 +371,8 @@ main {
     user-select: none;
 }
 
-/* Aside #mostPopulars */
-#mostPopulars {
+/* Aside #most-populars */
+#most-populars {
     width: 35%;
     display: flex;
     flex-direction: column;
@@ -381,40 +382,40 @@ main {
     border-radius: var(--border-radius);
 }
 
-#mostPopulars h2 {
+#most-populars h2 {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-#mostPopulars h2>i {
+#most-populars h2>i {
     color: var(--secondary);
 }
 
-#mostPopulars .card {
+#most-populars .card {
     height: 144px;
     flex-direction: row;
 }
 
-#mostPopulars .card-img {
+#most-populars .card__img {
     width: 40%;
     min-width: 40%;
     object-fit: cover;
     border-radius: 18px 0 0 18px;
 }
 
-#mostPopulars .card-content {
+#most-populars .card__content {
     width: 100%;
     display: flex;
     flex-direction: column;
     padding: 0.5rem 1.375rem;
 }
 
-#mostPopulars .card-content h3 {
+#most-populars .card__content h3 {
     max-width: 169px;
 }
 
-#mostPopulars .card-content-rating {
+#most-populars .card__content-rating {
     margin-top: auto;
 }
 
@@ -439,14 +440,14 @@ main {
     flex-direction: column;
 }
 
-#activities .card-img {
+#activities .card__img {
     width: 100%;
     height: 389px;
     object-fit: cover;
     border-radius: 18px 18px 0 0;
 }
 
-#activities .card-content {
+#activities .card__content {
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
@@ -477,7 +478,7 @@ footer {
     gap: 12px;
 }
 
-.col .list .list-item-link {
+.col .list .list__item__link {
     color: var(--primary);
 }
 
@@ -487,7 +488,7 @@ footer {
 @media screen and (max-width: 992px) {
 
     /* 8.1.1 - Tablet Header */
-    .nav-link::after {
+    .nav__link::after {
         top: -1rem;
     }
 
@@ -502,21 +503,21 @@ footer {
         width: 100%;
     }
 
-    .list-item {
+    .list__item {
         margin-right: 0.6rem;
     }
 
-    .list-item:last-child {
+    .list__item:last-child {
         margin-right: 0;
     }
 
-    .list-item .btn {
+    .list__item .btn {
         display: flex;
         padding: 0.6rem 0.5rem;
         white-space: nowrap;
     }
 
-    .list-item .btn i {
+    .list__item .btn i {
         margin-right: 0.5rem;
     }
 
@@ -524,7 +525,7 @@ footer {
         flex-direction: column;
     }
 
-    .card-border {
+    .card--border {
         border-width: 3px;
     }
 
@@ -539,24 +540,24 @@ footer {
         font-size: 0.875rem;
     }
 
-    /* Tablet Aside #mostPopulars */
-    #mostPopulars {
+    /* Tablet Aside #most-populars */
+    #most-populars {
         width: 100%;
         flex-flow: row wrap;
         gap: 1rem;
     }
 
-    #mostPopulars .card {
+    #most-populars .card {
         width: 30%;
         flex: 1 0 auto;
     }
 
-    #mostPopulars .card-content {
+    #most-populars .card__content {
         padding: 0.5rem;
     }
 
-    #mostPopulars .card-content h3,
-    #mostPopulars .card-content p {
+    #most-populars .card__content h3,
+    #most-populars .card__content p {
         font-size: 0.875rem;
     }
 
@@ -566,11 +567,11 @@ footer {
         padding: 0;
     }
 
-    #activities .card-img {
+    #activities .card__img {
         height: 211px;
     }
 
-    #activities .card-content {
+    #activities .card__content {
         justify-content: center;
     }
 
@@ -606,38 +607,38 @@ footer {
         margin: 0 auto 1.5rem auto;
     }
 
-    .nav-item {
+    .nav__item {
         height: 4rem;
         border-top: 0;
         border-bottom: 3px solid var(--bg-grey);
     }
 
-    .nav-item:hover {
+    .nav__item:hover {
         border-top: 0;
         border-bottom-color: var(--secondary);
     }
 
     /* Mobile Main */
 
-    /* Mobile Section #searchBar */
-    #searchBar {
+    /* Mobile Section #search-bar */
+    #search-bar {
         margin: 0 1rem;
         padding-top: 2rem;
     }
 
-    #searchBar h1 {
+    #search-bar h1 {
         font-size: 1.35rem;
     }
 
-    #searchBar p {
+    #search-bar p {
         font-size: 0.938rem;
     }
 
-    #searchBar button[type="submit"] span {
+    #search-bar button[type="submit"] span {
         display: none;
     }
 
-    #searchBar button[type="submit"] i {
+    #search-bar button[type="submit"] i {
         display: block;
         color: #ffffff;
     }
@@ -660,21 +661,21 @@ footer {
         row-gap: 1rem;
     }
 
-    .list-item {
+    .list__item {
         flex-basis: 48%;
         max-width: 200px;
         min-width: 142px;
     }
 
-    .list-item:nth-child(odd) {
+    .list__item:nth-child(odd) {
         margin-right: auto;
     }
 
-    .list-item:nth-child(even) {
+    .list__item:nth-child(even) {
         margin-right: 0;
     }
 
-    .list-item .btn {
+    .list__item .btn {
         width: 99%;
         display: flex;
         align-items: center;
@@ -682,7 +683,7 @@ footer {
         padding: 0.75rem 0 0.75rem 0.5rem;
     }
 
-    .list-item .btn i {
+    .list__item .btn i {
         font-size: 1rem;
         margin-right: 0.5rem;
     }
@@ -720,23 +721,23 @@ footer {
         display: none;
     }
 
-    /* Mobile Aside #mostPopulars */
-    #mostPopulars {
+    /* Mobile Aside #most-populars */
+    #most-populars {
         order: 1;
         padding: 1.5rem 1rem;
         flex-direction: column;
         border-radius: unset;
     }
 
-    #mostPopulars .card {
+    #most-populars .card {
         width: 100%;
     }
 
-    #mostPopulars .card-img {
+    #most-populars .card__img {
         width: 40%;
     }
 
-    #mostPopulars .card-content {
+    #most-populars .card__content {
         padding: 0.5rem 1.375rem;
     }
 
@@ -750,7 +751,7 @@ footer {
         width: 100%;
     }
 
-    #activities .card-img {
+    #activities .card__img {
         height: 134px;
     }
 
